set(CHAPTER1 ${AC_SOURCE_DIR}/chapter01)
set(CHAPTER3 ${AC_SOURCE_DIR}/chapter03)
set(CHAPTER7 ${AC_SOURCE_DIR}/chapter07)
set(CHAPTER8 ${AC_SOURCE_DIR}/chapter08)
set(CHAPTER10 ${AC_SOURCE_DIR}/chapter10)

add_subdirectory(${CHAPTER1})
add_subdirectory(${CHAPTER3})
add_subdirectory(${CHAPTER7})
add_subdirectory(${CHAPTER8})
add_subdirectory(${CHAPTER10})