add_executable(fork_example fork_example.c)
add_executable(wait_example wait_example.c)
add_executable(double_fork double_fork.c)
add_executable(fork_wait fork_wait.c)
add_executable(echoall echoall.c)
add_executable(exec_example exec_example.c)
add_executable(system_example system_example.c)
add_executable(printuids printuids.c)
add_executable(system_cmd system_cmd.c)
add_executable(nice_example nice_example.c)
add_executable(tms_example tms_example.c)
add_executable(fork_wait_signal fork_wait.c)

target_link_libraries(fork_example apue-lib)
target_link_libraries(wait_example apue-lib)
target_link_libraries(double_fork apue-lib)
target_link_libraries(fork_wait apue-lib apue-wait)
target_link_libraries(echoall apue-lib)
target_link_libraries(exec_example apue-lib)
target_link_libraries(system_example apue-lib apue-wait)
target_link_libraries(printuids apue-lib)
target_link_libraries(nice_example apue-lib)
target_link_libraries(tms_example apue-lib)
target_link_libraries(fork_wait_signal apue-lib apue-signal-wait)

